メインページのレイアウトを改良

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -34,7 +34,7 @@ body {
 .zu1 {
     /*padding: 0.5em 1em;
     margin: 2em 0;*/
-    height: 488px;
+    height: 484px;
     width: 320px;
     border: double 9px orange;
     /*border-radius: 10px;*/
@@ -270,7 +270,7 @@ font-family:"HGP創英角ﾎﾟｯﾌﾟ体";
   <div id="center">
   <svg class="zu1" id="svg1" width="400" height="450">
     <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
-    <div style="background-color: dimgray;">
+    <div style="background-color: dimgray; border-top: 4px solid dimgray;">
     <div id="watertime_select" class="box1" align="center">
     <form name="water_form" action="Sample.html">
     <font size="4px" style="font-weight: bold;">水やり時間</font>
