--- a/AIoT/templates/AIoT/getdata.html
+++ b/AIoT/templates/AIoT/getdata.html
@@ -106,16 +106,16 @@ select {
       //ユーザ発話のマッチング
       function getTextContents(text1) {
           console.log(text1);
-          if(text1.match(/画像/)){
+          if(text1.match(/画像/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/)||text1.match(/一覧/))){
             OnseiGousei("了解です");
             setTimeout(move_page, 2500, "画像")
-          }　else if(text1.match(/メイン/)||text1.match(/バック/)){
+          }　else if(text1.match(/メイン/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/)||text1.match(/バック/)||text1.match(/戻/))){
             OnseiGousei("了解です");
             setTimeout(move_page, 2500, "メインページ")
-          }　else if(text1.match(/詳細/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/))){
+          }　else if(text1.match(/詳細/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/))){
             OnseiGousei("日付は？");
             i = 2;
-          }　else if(text1.match(/表示/)||text1.match(/件数/)){
+          }　else if((text1.match(/表示/)||text1.match(/件/)||text1.match(/数/))&&(text1.match(/変/)||text1.match(/代/)||text1.match(/チェンジ/))){
             OnseiGousei("何件？");
             i = 3;
           }　
