--- a/AIoT/templates/AIoT/mailaddress.html
+++ b/AIoT/templates/AIoT/mailaddress.html
@@ -93,16 +93,16 @@ h3 {
     //ユーザ発話のマッチング
     function getTextContents(text1) {
         console.log(text1);
-        if(text1.match(/取得データ/)){
+        if(text1.match(/取得データ/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/))){
           OnseiGousei("了解です");
           setTimeout(move_page, 2500, "取得データ")
-        } else if(text1.match(/画像/)){
+        } else if(text1.match(/画像/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/)||text1.match(/一覧/))){
           OnseiGousei("了解です");
           setTimeout(move_page, 2500, "画像")
-        } else if(text1.match(/メイン/)||text1.match(/バック/)){
+        } else if(text1.match(/メイン/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/)||text1.match(/バック/)||text1.match(/戻/))){
           OnseiGousei("了解です");
           setTimeout(move_page, 2500, "メインページ")
-        } else if(text1.match(/詳細/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/))){
+        } else if(text1.match(/詳細/)&&(text1.match(/よろしく/)||text1.match(/願/)||text1.match(/移/)||text1.match(/見/)||text1.match(/飛/)||text1.match(/おねがい/)||text1.match(/表/)||text1.match(/示/))){
           OnseiGousei("日付は？");
           i = 2;
         }
