--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -510,7 +510,7 @@ function OnseiGousei(onsei,get) {
           setTimeout(OnseiHyouji_User_API("NOTTALKTHRESHOLDNO"),recstopsec);
         }
       }
-      var recstopsec = onsei.length * 200;
+      recstopsec = onsei.length * 200;
       // console.log(recstopsec)
       if(onsei == "またお話しましょう") {
         setTimeout("ChangeRecMode(2)",recstopsec);
@@ -519,7 +519,6 @@ function OnseiGousei(onsei,get) {
       }
     }
   };
-  else{
 
   data1 = datax;
   xhr.send(data1);
