比較演算子の修正

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -502,7 +502,7 @@ function OnseiGousei(onsei,get) {
       audio = new Audio(URL.createObjectURL(blob));
       audio.play();
       var  recstopsec = 0
-      if (get = true){
+      if (get == true){
         recstopsec = 13000;
         if(threshold_form.threshold.value*1.2 < nowmoisture){
           setTimeout(OnseiHyouji_User_API("NOTTALKTHRESHOLDOK"),recstopsec);
