細かい修正（画像）

--- a/AIoT/templates/AIoT/pict_list.html
+++ b/AIoT/templates/AIoT/pict_list.html
@@ -340,6 +340,7 @@ if (pict_list.length == 0){
     "id":"slide",
     "width": innerWidth * 0.98 + "px",
     "height": innerHeight * 3 / 4 + "px",
+    "display": "none",
   });
   for(i=0; i < pict_list.length; i++) {
     var tmp = d3.select("#slide").append("svg").attr({
