--- a/AIoT/templates/AIoT/getdata.html
+++ b/AIoT/templates/AIoT/getdata.html
@@ -67,7 +67,56 @@ select {
       </tbody>
     </table>
     <script type="text/javascript">
-      //システム発話を表示・音声再生する
+      //写真の列数関連
+      var record_num = {{record_num}};
+      var num = [50,100,200,500,1000,2000,5000,"全"];
+      for (i=0;i<num.length;i++){
+        if(num[i] == record_num){
+          break;
+        } else if(num[i] > record_num){
+          num.splice(i, 0, record_num);
+          break;
+        } else if(num[i] == "全"){
+          if({{all_record}} > record_num){
+            num.splice(i, 0, record_num);
+            break;
+          } else{
+            record_num = "全";
+            break;
+          }
+        }
+      }
+      var num_form = d3.select("#record").append("form").attr({
+        "name":"num_form",
+        "id":"num_form",
+        // "float":"left",
+        "display":"inline",
+      });
+      var num_select = num_form.append("select").attr({
+        "name":"num_select",
+        "id":"num_select",
+      });
+      num_select.selectAll("num").data(num).enter().append("option").attr({
+        "id":function(d){return "num"+d;},
+        "value":function(d){return d;},
+      }).text(function(d){return d + "件";});
+
+      d3.select("#num_form").append("a").attr({
+        "name":"num_reload",
+        "id":"num_reload",
+        // "type":"button",
+        "onclick":"record_change()",
+        "class":"btn btn-default btn-sm",
+        // "href": "{% url 'AIoT:getdata' %}" + "?num=" + document.num_form.num_select.value,
+      }).text("変更");
+      //初期表示件数を100に設定
+      document.num_form.num_select.value = String(record_num);
+      function record_change(){
+        location.href = "{% url 'AIoT:getdata' %}" + "?num=" + document.num_form.num_select.value;
+      }
+    </script>
+    <script type="text/javascript">
+    //システム発話を表示・音声再生する
       function OnseiGousei(onsei,get) {
         xhr = new XMLHttpRequest();
         xhr.open('POST', 'https://api.apigw.smt.docomo.ne.jp/voiceText/v1/textToSpeech?APIKEY=4243356f65594f4435517944436f43345a42515767785831573876323459627a5938487839776c4d725338', true);
@@ -201,55 +250,6 @@ select {
           }
         }
       }
-
-      //写真の列数関連
-      var record_num = {{record_num}};
-      var num = [50,100,200,500,1000,2000,5000,"全"];
-      for (i=0;i<num.length;i++){
-        if(num[i] == record_num){
-          break;
-        } else if(num[i] > record_num){
-          num.splice(i, 0, record_num);
-          break;
-        } else if(num[i] == "全"){
-          if({{all_record}} > record_num){
-            num.splice(i, 0, record_num);
-            break;
-          } else{
-            record_num = "全";
-            break;
-          }
-        }
-      }
-      var num_form = d3.select("#record").append("form").attr({
-        "name":"num_form",
-        "id":"num_form",
-        // "float":"left",
-        "display":"inline",
-      });
-      var num_select = num_form.append("select").attr({
-        "name":"num_select",
-        "id":"num_select",
-      });
-      num_select.selectAll("num").data(num).enter().append("option").attr({
-        "id":function(d){return "num"+d;},
-        "value":function(d){return d;},
-      }).text(function(d){return d + "件";});
-
-      d3.select("#num_form").append("a").attr({
-        "name":"num_reload",
-        "id":"num_reload",
-        // "type":"button",
-        "onclick":"record_change()",
-        "class":"btn btn-default btn-sm",
-        // "href": "{% url 'AIoT:getdata' %}" + "?num=" + document.num_form.num_select.value,
-      }).text("変更");
-      //初期表示件数を100に設定
-      document.num_form.num_select.value = String(record_num);
-      function record_change(){
-        location.href = "{% url 'AIoT:getdata' %}" + "?num=" + document.num_form.num_select.value;
-      }
-
     //ここから音声対話
     var apiUrl = 'https://api.apigw.smt.docomo.ne.jp/dialogue/v1/dialogue?APIKEY=';
     var apiKey = '4243356f65594f4435517944436f43345a42515767785831573876323459627a5938487839776c4d725338';
